# trace-encoder-pure

./: .gitignore  Cargo.toml  TODO.md  build.rs  pyproject.toml  readme.md  trace.proto  trace_encoder_lite.pyi
src/: lib.rs  main.rs
test/: test_encode_spans.py
